# ruffle

./: Cargo.toml  deny.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: release_amo.yml  release_nightlies.yml  release_nightly.yml  test_extension_dockerfile.yml  test_rust.yml  test_web.yml
codecs/h263/: Cargo.toml
codecs/h263/src/: lib.rs  types.rs
codecs/h263/src/decoder/: block.rs  gob.rs  macroblock.rs  picture.rs  state.rs  types.rs
codecs/h263/src/parser/: block.rs  gob.rs  macroblock.rs  picture.rs
codecs/nellymoser/: Cargo.toml
codecs/nellymoser/src/: lib.rs
codecs/vp6/: Cargo.toml  build.rs
codecs/vp6/src/: bindings.rs  decoder.rs  helpers.c  lib.rs
codecs/vp6/src/fakelibc/: impl.c  (+3 more)
codecs/yuv/src/: bt601.rs
core/: Cargo.toml
core/build_playerglobal/: Cargo.toml
core/macros/: Cargo.toml
core/src/: avm2.rs  backend.rs  bitmap.rs  context.rs  display_object.rs  i18n.rs  lib.rs  library.rs  loader.rs  player.rs  streams.rs
core/src/avm1/: globals.rs  test_utils.rs
core/src/avm2/: globals.rs
core/src/backend/: audio.rs  render.rs  video.rs
core/src/bitmap/: bitmap_data.rs  filters.rs
core/src/display_object/: bitmap.rs  button.rs  container.rs  edit_text.rs  graphic.rs  movie_clip.rs  video.rs
core/src/string/: repr.rs
core/tests/: regression_tests.rs
desktop/: Cargo.toml
desktop/src/: app.rs  audio.rs  egui_glyphon.rs  gui.rs  main.rs  player.rs  time_demo.rs  util.rs  video.rs
desktop/src/backends/: navigator.rs  ui.rs
desktop/src/gui/: controller.rs  open_dialog.rs
exporter/: Cargo.toml
exporter/src/: main.rs
frontend-utils/: Cargo.toml
render/: Cargo.toml
render/canvas/: Cargo.toml
render/canvas/src/: lib.rs
render/naga-agal/: Cargo.toml
render/naga-agal/src/: builder.rs
render/naga-pixelbender/src/: lib.rs
render/src/: backend.rs  bitmap.rs  filters.rs  tessellator.rs
render/src/backend/: null.rs
render/webgl/: Cargo.toml
render/webgl/src/: lib.rs
render/wgpu/: Cargo.toml
render/wgpu/shaders/: color.wgsl
render/wgpu/src/: backend.rs  clap.rs  descriptors.rs  filters.rs  globals.rs  lib.rs  pipelines.rs  pixel_bender.rs  shaders.rs  surface.rs  target.rs  uniform_buffer.rs  utils.rs
scanner/: Cargo.toml
swf/src/: read.rs  types.rs
tests/: Cargo.toml
tests/framework/: Cargo.toml
tests/input-format/: Cargo.toml
tests/tests/: regression_tests.rs
video/: Cargo.toml
video/software/: Cargo.toml
video/software/src/: backend.rs
video/src/: backend.rs  frame.rs  null.rs
web/: Cargo.toml  README.md  package-lock.json  package.json
web/.cargo/: config
web/bench/: dist  index.html  run.py  temci.cmd
web/common/: Cargo.toml
web/docker/: Dockerfile
web/src/: audio.rs  builder.rs  lib.rs
web/src/audio/: mixer.rs
(+47 files in other folders)
