[workspace]
members = [
    "core",
    "core/macros",
    "desktop",
    "swf",
    "web",
    "scanner",
    "exporter",

    "render/canvas",
    "render/wgpu",
    "render/common_tess",
    "render/webgl",

    "codecs/h263",
    "codecs/yuv",
]


[patch.'https://github.com/gfx-rs/gfx']
gfx-backend-gl = { path = "../gfx/src/backend/gl" }
gfx-hal = { path = "../gfx/src/hal" }


[patch.'https://github.com/grovesNL/spirv_cross']
spirv_cross = { path = "../spirv_cross/spirv_cross" }


# Don't optimize build scripts and macros.
[profile.release.build-override]
opt-level = 0

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.dev.package.ruffle_codec_h263]
opt-level = 3

[profile.dev.package.ruffle_codec_yuv]
opt-level = 3