[package]
name = "ruffle_video_software"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ruffle_render = { path = "../../render" }
ruffle_video = { path = ".." }
swf = { path = "../../swf" }
generational-arena = "0.2.8"
thiserror = "1.0"
flate2 = "1.0.25"
log = "0.4"

h263-rs = { git = "https://github.com/ruffle-rs/h263-rs", rev = "d5d78eb251c1ce1f1da57c63db14f0fdc77a4b36", optional = true }
nihav_core = { git = "https://github.com/ruffle-rs/nihav-vp6", rev = "0a07e3972b7e0aac5d23288dd63fa679c779ea98", optional = true }
nihav_codec_support = { git = "https://github.com/ruffle-rs/nihav-vp6", rev = "0a07e3972b7e0aac5d23288dd63fa679c779ea98", optional = true }
nihav_duck = { git = "https://github.com/ruffle-rs/nihav-vp6", rev = "0a07e3972b7e0aac5d23288dd63fa679c779ea98", optional = true }

[features]
default = ["h263", "vp6", "screenvideo"]
h263 = ["h263-rs"]
vp6 = ["nihav_core", "nihav_codec_support", "nihav_duck"]
screenvideo = []
